--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1</version>
     <packaging>war</packaging>
 
-    <name>betasquirrel-api</name>
+    <name>spring-boot-validator</name>
     <description>BetaSquirrel project for Spring Boot</description>
 
     <parent>
