--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # Database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
