--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/mydb?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 # Server
-server.port=8080
+server.port=8081
