--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 services:
   docker-mysql:
-    image: mysql:latest
-    ports:
-    - 3306
+    image: mysql
     environment:
     - MYSQL_ROOT_PASSWORD=1234
     - MYSQL_DATABASE=mydb
@@ -16,7 +14,7 @@ services:
     ports:
     - 8081:8081
     environment:
-    - DATABASE_HOST=172.18.0.2
+    - DATABASE_HOST=docker-mysql
     - DATABASE_USER=root
     - DATABASE_PASSWORD=1234
     - DATABASE_NAME=mydb
