--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://172.18.0.2/mydb?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://docker-mysql/mydb?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.show-sql=true
